--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>User Information</title>
+    <title>au-uk</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <style>
         /* Custom CSS for the banner */
@@ -25,31 +25,13 @@
             margin: 0;
             font-size: 1rem;
         }
-
-        /* Custom CSS for the Matrix effect container */
-        .matrix-container {
-            position: absolute;
-            top: 20%;
-            left: 0;
-            width: 100%;
-            height: 20%;
-            pointer-events: none;
-            z-index: -1;
-            overflow: hidden;
-        }
-
-        .matrix-text {
-            position: absolute;
-            color: #00FF00;
-            font-size: 14px;
-        }
     </style>
 </head>
 <body>
     <!-- Web Banner with User Data -->
     <div class="web-banner">
         <div class="banner-content">
-            <p>This is a responsive web banner. <strong>Browser:</strong> <span id="browserInfo">Loading...</span>
+            <p>Displaying our digital footprint<strong>Browser:</strong> <span id="browserInfo">Loading...</span>
                 <strong>Operating System:</strong> <span id="osInfo">Loading...</span>
                 <strong>Date:</strong> <span id="dateInfo">Loading...</span>
                 <strong>Time:</strong> <span id="timeInfo">Loading...</span>
@@ -69,67 +51,7 @@
         <!-- Main Content Section -->
         <section class="mt-4">
             <div class="row">
-                <!-- User Information -->
-                <div class="col-md-6 offset-md-3">
-                    <h2>Your Information:</h2>
-                    <p><strong>Browser:</strong> <span id="browserInfo">Loading...</span></p>
-                    <p><strong>Operating System:</strong> <span id="osInfo">Loading...</span></p>
-                    <p><strong>Date:</strong> <span id="dateInfo">Loading...</span></p>
-                    <p><strong>Time:</strong> <span id="timeInfo">Loading...</span></p>
-                    <p><strong>Timezone:</strong> <span id="timezoneInfo">Loading...</span></p>
-                    <p><strong>Location:</strong> <span id="locationInfo">Loading...</span></p>
-                    <p><strong>Language:</strong> <span id="languageInfo">Loading...</span></p>
-                </div>
-            </div>
         </section>
-    </div>
-
-    <!-- Matrix Falling Text Effect -->
-    <div class="matrix-container">
-        <script>
-            // Create the Matrix effect
-            const matrixContainer = document.querySelector(".matrix-container");
-
-            // Adjust the number of columns and text size for responsiveness
-            const columns = window.innerWidth / 10;
-            const fontSize = window.innerWidth / 100;
-            const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-            const matrixText = [];
-
-            for (let i = 0; i < columns; i++) {
-                matrixText[i] = {
-                    text: "",
-                    y: Math.floor(Math.random() * matrixContainer.clientHeight),
-                    speed: Math.floor(Math.random() * 5) + 1,
-                };
-            }
-
-            function draw() {
-                matrixContainer.innerHTML = "";
-                matrixText.forEach((item) => {
-                    const text = document.createElement("div");
-                    text.className = "matrix-text";
-                    text.textContent = item.text;
-                    text.style.fontSize = fontSize + "px";
-                    text.style.top = item.y + "px";
-                    text.style.left = matrixText.indexOf(item) * 10 + "px";
-                    matrixContainer.appendChild(text);
-
-                    // Randomly update the text and y position
-                    if (Math.random() > 0.975 || item.y > matrixContainer.clientHeight) {
-                        item.text = characters[Math.floor(Math.random() * characters.length)];
-                        item.y = 0;
-                        item.speed = Math.floor(Math.random() * 5) + 1;
-                    } else {
-                        item.y += item.speed;
-                    }
-                });
-
-                requestAnimationFrame(draw);
-            }
-
-            draw();
-        </script>
     </div>
 </body>
 </html>
