--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>au-uk</title>
+    <title>User Information</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <style>
         /* Custom CSS for the banner */
@@ -25,19 +25,28 @@
             margin: 0;
             font-size: 1rem;
         }
+
+        @keyframes scrollData {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
     </style>
 </head>
 <body>
     <!-- Web Banner with User Data -->
     <div class="web-banner">
         <div class="banner-content">
-            <p>Displaying our digital footprint<strong>Browser:</strong> <span id="browserInfo">Loading...</span>
+            <p>This is a responsive web banner. <strong>Browser:</strong> <span id="browserInfo">Loading...</span>
                 <strong>Operating System:</strong> <span id="osInfo">Loading...</span>
                 <strong>Date:</strong> <span id="dateInfo">Loading...</span>
                 <strong>Time:</strong> <span id="timeInfo">Loading...</span>
                 <strong>Timezone:</strong> <span id="timezoneInfo">Loading...</span>
                 <strong>Location:</strong> <span id="locationInfo">Loading...</span>
-                <strong>Language:</strong> <span id "languageInfo">Loading...</span>
+                <strong>Language:</strong> <span id="languageInfo">Loading...</span>
             </p>
         </div>
     </div>
@@ -51,7 +60,47 @@
         <!-- Main Content Section -->
         <section class="mt-4">
             <div class="row">
+                <!-- User Information -->
+                <div class="col-md-6 offset-md-3">
+                    <h2>Your Information:</h2>
+                    <p><strong>Browser:</strong> <span id="browserInfo">Loading...</span></p>
+                    <p><strong>Operating System:</strong> <span id="osInfo">Loading...</span></p>
+                    <p><strong>Date:</strong> <span id="dateInfo">Loading...</span></p>
+                    <p><strong>Time:</strong> <span id="timeInfo">Loading...</span></p>
+                    <p><strong>Timezone:</strong> <span id="timezoneInfo">Loading...</span></p>
+                    <p><strong>Location:</strong> <span id="locationInfo">Loading...</span></p>
+                    <p><strong>Language:</strong> <span id="languageInfo">Loading...</span></p>
+                </div>
+            </div>
         </section>
     </div>
+
+    <script>
+        // JavaScript code to display user information
+        document.getElementById('browserInfo').textContent = navigator.userAgent;
+        document.getElementById('osInfo').textContent = navigator.platform;
+        document.getElementById('dateInfo').textContent = new Date().toDateString();
+        document.getElementById('timeInfo').textContent = new Date().toLocaleTimeString();
+        document.getElementById('timezoneInfo').textContent = Intl.DateTimeFormat().resolvedOptions().timeZone;
+        
+        // Function to get and display user's location
+        function getUserLocation() {
+            if ("geolocation" in navigator) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
+                    document.getElementById('locationInfo').textContent = `Latitude: ${latitude}, Longitude: ${longitude}`;
+                });
+            } else {
+                document.getElementById('locationInfo').textContent = "Location not available.";
+            }
+        }
+
+        // Call the function to get the user's location
+        getUserLocation();
+        
+        // Display language information in the web banner
+        document.getElementById('languageInfo').textContent = `Language: ${navigator.language}`;
+    </script>
 </body>
 </html>
