--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>User Information</title>
+    <title>au-uk</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <style>
         /* Custom CSS for the banner */
@@ -40,7 +40,7 @@
     <!-- Web Banner with User Data -->
     <div class="web-banner">
         <div class="banner-content">
-            <p>This is a responsive web banner. <strong>Browser:</strong> <span id="browserInfo">Loading...</span>
+            <p>Your digital footprint <strong>Browser:</strong> <span id="browserInfo">Loading...</span>
                 <strong>Operating System:</strong> <span id="osInfo">Loading...</span>
                 <strong>Date:</strong> <span id="dateInfo">Loading...</span>
                 <strong>Time:</strong> <span id="timeInfo">Loading...</span>
@@ -49,30 +49,6 @@
                 <strong>Language:</strong> <span id="languageInfo">Loading...</span>
             </p>
         </div>
-    </div>
-
-    <div class="container">
-        <!-- Header Section -->
-        <header class="text-center mt-4">
-            <h1 class="display-4">User Information</h1>
-        </header>
-
-        <!-- Main Content Section -->
-        <section class="mt-4">
-            <div class="row">
-                <!-- User Information -->
-                <div class="col-md-6 offset-md-3">
-                    <h2>Your Information:</h2>
-                    <p><strong>Browser:</strong> <span id="browserInfo">Loading...</span></p>
-                    <p><strong>Operating System:</strong> <span id="osInfo">Loading...</span></p>
-                    <p><strong>Date:</strong> <span id="dateInfo">Loading...</span></p>
-                    <p><strong>Time:</strong> <span id="timeInfo">Loading...</span></p>
-                    <p><strong>Timezone:</strong> <span id="timezoneInfo">Loading...</span></p>
-                    <p><strong>Location:</strong> <span id="locationInfo">Loading...</span></p>
-                    <p><strong>Language:</strong> <span id="languageInfo">Loading...</span></p>
-                </div>
-            </div>
-        </section>
     </div>
 
     <script>
