--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             text-align: center;
             padding: 10px;
             overflow: hidden;
+            background-color: #007BFF;
             transition: background-color 2s, color 2s;
         }
         
