--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             color: #fff;
             text-align: center;
             transition: background-color 2s, color 2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
             position: relative;
         }
 
         .user-data {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             font-size: 1.5rem;
         }
 
