--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <script>
         // User data elements
         const userDataElements = [
-            { label: "Browser", id: "browserInfo" },
-            { label: "Operating System", id: "osInfo" },
-            { label: "Date", id: "dateInfo" },
-            { label: "Time", id: "timeInfo" },
-            { label: "Timezone", id: "timezoneInfo" }
+            { label: "Your Browser", id: "browserInfo" },
+            { label: "Your Operating System", id: "osInfo" },
+            { label: "Your Date", id: "dateInfo" },
+            { label: "Your Time", id: "timeInfo" },
+            { label: "Your Timezone", id: "timezoneInfo" }
         ];
 
         // JavaScript to change the background and text colors randomly
