--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 <main>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
     <div class="col-md-6 p-lg-5 mx-auto my-5">
-      <h1 class="display-3 fw-bold">Designed for engineers</h1>
-      <h3 class="fw-normal text-muted mb-3">Build anything you want with Aperture</h3>
+      <h1 class="display-3 fw-bold">Engineered for engineers</h1>
+      <h3 class="fw-normal text-muted mb-3">The ramblings of a technologist and bit wrangler</h3>
       <div class="d-flex gap-3 justify-content-center lead fw-normal">
         <a class="icon-link" href="#">
           Learn more
